k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cts
  labels:
    app.kubernetes.io/part-of: continuous-tracking
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
